k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booklibrary-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booklibrary-web
  template:
    metadata:
      labels:
        app: booklibrary-web
    spec:
      containers:
      - name: web
        image: testlibrary.azurecr.io/booklibrary-web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: booklibrary-web
spec:
  selector:
    app: booklibrary-web
  ports:
    - port: 80
      targetPort: 80
