k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: testlibrary.azurecr.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: booklibrary-api
            port:
              number: 80
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: booklibrary-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: booklibrary-web
            port:
              number: 80
